--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,18 @@
 
 * {
     font-family: 'Roboto', sans-serif;
-}
-
-body {
-    margin: 0 !important;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 h1, h2, h3 {
     text-align: center;
+}
+
+h3 {
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .text-gradient {
@@ -29,31 +33,125 @@ h1, h2, h3 {
 }
 
 /* Navigation */
-.main-nav {
+header {
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
     position: fixed;
     width: 100%;
-}
-
-.main-nav ul {
-    margin-right: 20px;
-}
-
-.main-nav ul li {
-    display: inline;
-}
-
-.main-nav ul li a {
-    padding: 3px 10px 3px 10px;
+    height: 50px;
+    padding: 0 20px;
     font-size: 1.3rem;
+    box-shadow: rgba(0, 0, 0, 0.5) 0px 2px 4px;
+}
+
+/* Brand Logo */
+#brand {
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+}
+
+#brand>a {
+    display: block;
+    color: white;
+    text-decoration: none;
+    text-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+
+#brand>a:hover {
+    transform: scale(1.1);
+    transition: 0.3s;
+}
+
+/* The Navigation Itself */
+header ul {
+    margin-top: 0;
+    list-style: none;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+header ul li {
+    padding: 5px;
+}
+
+header ul li a {
+    display: block;
+    padding-left: 20px;
     color: white;
     text-decoration: none;
 }
 
-.main-nav ul li a:hover {
-    color: orange;
+header ul li a:hover {
+    transform: scale(1.1);
+    transition: 0.3s;
 }
+
+/* Hamburger Menu */
+#hamburger-icon {
+    box-sizing: border-box;
+    margin: auto 0;
+    display: none;
+    cursor: pointer;
+}
+
+#hamburger-icon div {
+    width: 35px;
+    height: 3px;
+    background-color: white;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+/* Hamburger Animation */
+.open .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-6px, 6px);
+    transform: rotate(-45deg) translate(-6px, 6px);
+}
+
+.open .bar2 {
+    opacity: 0;
+}
+
+.open .bar3 {
+    -webkit-transform: rotate(45deg) translate(-6px, -8px);
+    transform: rotate(45deg) translate(-6px, -8px);
+}
+
+.open .mobile-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.mobile-menu {
+    display: none;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    width: 100%;
+    height: 170px;
+    padding-top: 20px;
+    background-color: rgb(168, 156, 156);
+}
+
+.mobile-menu li {
+    margin-bottom: 10px;
+}
+
+@media only screen and (max-width: 700px) {
+    #navbar {
+        display: none;
+    }
+
+    #hamburger-icon {
+        display: block;
+    }
+}
+
 
 /* Welcome Screen */
 #welcome-section {
@@ -106,9 +204,9 @@ h1, h2, h3 {
 }
 
 .project-tile:hover {
-    color:orange;
+    color: orange;
     box-shadow: rgba(14, 30, 37, 0.62) 0px 2px 4px 0px, rgba(14, 30, 37, 0.62) 0px 2px 16px 0px;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .img-wrapper {
@@ -128,27 +226,52 @@ h1, h2, h3 {
     justify-content: center;
     align-items: center;
     color: white;
-    padding: 20px 0px 20px 0px;
+    padding: 30px;
 }
 
 .contacts-div {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.contacts-div > h3 {
-    margin: 0;
-    margin-bottom: 4px;
+.contacts-div>h2 {
+    margin: 0px 0px 20px 0px;
 }
 
 .contacts-div a {
+    display: block;
     color: white;
     text-decoration: none;
 }
 
+.contacts-div a:hover {
+    transform: scale(1.1);
+    transition: 0.3s;
+}
+
+#contacts ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0;
+}
+
 #contacts ul li {
-    display: inline;
     text-align: center;
-    margin-right: 10px;
+    padding: 0px 20px 0px 20px;
+}
+
+footer {
+    background-color: rgb(36, 36, 36);
+    padding: 20px;
+    display: flex;
+    justify-content: end;
+}
+
+footer > p {
+    color: lightgray;
+    font-size: 0.8rem;
 }
