--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap');
 
 * {
     font-family: 'Roboto', sans-serif;
@@ -11,6 +11,12 @@ h1, h2, h3 {
     text-align: center;
 }
 
+h2 {
+    margin-bottom: 1.3rem;
+    font-size: 5vmin;
+    font-weight: bold;
+}
+
 h3 {
     margin-top: 15px;
     margin-bottom: 15px;
@@ -20,7 +26,7 @@ h3 {
     background-color: brown;
     background-image: linear-gradient(45deg, brown, #4256af);
     background-size: 100%;
-    -webkit-background-clip: text;
+    background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
@@ -156,7 +162,7 @@ header ul li a:hover {
 /* Welcome Screen */
 #welcome-section {
     background-color: #dbd8d8;
-    background-image: linear-gradient(45deg, rgb(170, 170, 170), #dbd8d8);
+    background-image: linear-gradient(90deg, rgb(224, 224, 224), #f5f3f3);
     background-size: 100%;
     height: 100vh;
     display: flex;
@@ -166,28 +172,57 @@ header ul li a:hover {
 }
 
 #title {
-    margin: 0;
-    font-size: 6rem;
+    margin-bottom: 1rem;
+    font-size: 14vmin;
     font-weight: bold;
 }
 
 #subtitle {
-    font-size: 2em;
+    font-size: 6vmin;
     font-style: italic;
 }
 
+/* About me Section */
+
+#about-me {
+    height: 100vh;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(23, 40, 65);
+}
+
+#about-me h2 {
+    color: white;
+}
+
+#about-me p {
+    color: white;
+    max-width: 800px;
+    margin-bottom: 20px;
+}
+
+#bio-wrapper {
+    display: flex;
+}
+
+#portrait {
+    border-radius: 5px;
+    max-height: 300px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
 /* Projects Section */
-#projects-header {
-    margin-top: 3rem;
-    margin-bottom: 1.3rem;
-    font-size: 2rem;
-    text-decoration: underline #32557f77 solid;
+#projects-section {
+    padding: 50px;
 }
 
 #projects {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(min(100%/1, max(400px, 100%/4)), 1fr));
-    gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(min(100%/1, max(300px, 100%/4)), 1fr));
+    gap: 30px;
     padding: 20px 50px 20px 50px;
 }
 
@@ -199,19 +234,22 @@ header ul li a:hover {
 
 .project-tile {
     overflow: hidden;
-    /* max-width: 500px; */
+    border-radius: 5px;
+    padding-bottom: 0%;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
 
 .project-tile:hover {
-    color: orange;
     box-shadow: rgba(14, 30, 37, 0.62) 0px 2px 4px 0px, rgba(14, 30, 37, 0.62) 0px 2px 16px 0px;
     cursor: pointer;
+    transform: scale(1.05);
+    transition: 0.3s;
 }
 
 .img-wrapper {
     width: 100%;
-    max-height: 350px;
+    height: 0;
+    padding-bottom: 100%;
     overflow: hidden;
 }
 
@@ -226,7 +264,7 @@ header ul li a:hover {
     justify-content: center;
     align-items: center;
     color: white;
-    padding: 30px;
+    padding: 50px;
 }
 
 .contacts-div {
@@ -271,7 +309,7 @@ footer {
     justify-content: end;
 }
 
-footer > p {
+footer>p {
     color: lightgray;
     font-size: 0.8rem;
 }
