--- a/styles.css
+++ b/styles.css
@@ -58,25 +58,6 @@ header {
     z-index: 100;
 }
 
-/* Brand Logo */
-/* #brand {
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-}
-
-#brand>a {
-    display: block;
-    color: white;
-    text-decoration: none;
-    text-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-}
-
-#brand>a:hover {
-    transform: scale(1.1);
-    transition: 0.3s;
-} */
-
 /* || NAVIGATION */
 header ul {
     margin-top: 0;
@@ -90,76 +71,26 @@ header ul li {
 
 header ul li a {
     display: block;
-    padding-left: 20px;
     text-decoration: none;
     color: var(--orange-dark);
 }
 
 header ul li a:hover {
-    transform: scale(1.1);
+    transform: scale(1.2);
     transition: 0.3s;
 }
 
-/* Hamburger Menu */
-#hamburger-icon {
-    box-sizing: border-box;
-    margin: auto 0;
-    display: none;
-    cursor: pointer;
-}
-
-#hamburger-icon div {
-    width: 35px;
-    height: 3px;
-    background-color: white;
-    margin: 6px 0;
-    transition: 0.4s;
-}
-
-/* Hamburger Animation */
-.open .bar1 {
-    -webkit-transform: rotate(-45deg) translate(-6px, 6px);
-    transform: rotate(-45deg) translate(-6px, 6px);
-}
-
-.open .bar2 {
-    opacity: 0;
-}
-
-.open .bar3 {
-    -webkit-transform: rotate(45deg) translate(-6px, -8px);
-    transform: rotate(45deg) translate(-6px, -8px);
-}
-
-.open .mobile-menu {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-}
-
-.mobile-menu {
-    display: none;
-    position: absolute;
-    top: 50px;
-    left: 0;
-    width: 100%;
-    height: 210px;
-    padding-top: 20px;
-    background-color: rgb(168, 156, 156);
-}
-
-.mobile-menu li {
-    margin-bottom: 10px;
-}
-
 @media only screen and (max-width: 700px) {
-    #navbar {
-        display: none;
+    header {
+        justify-content: center;
+        background-color: var(--blue-dark);  
+        box-shadow: rgba(99, 99, 99, 0.5) 0px 2px 8px 0px;  
     }
-
-    #hamburger-icon {
-        display: block;
+    header ul {
+        display: flex;
+        width: 100vw;
+        justify-content:space-evenly;
+        align-items: center;
     }
 }
 
@@ -174,6 +105,7 @@ header ul li a:hover {
     align-items: center;
     justify-content: center;
 }
+
 
 #title {
     margin-bottom: 1rem;
@@ -193,13 +125,13 @@ header ul li a:hover {
 /* || ABOUT ME SECTION */
 
 #about-me {
-    height: 100vh;
+    min-height: 100vh;
     padding: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgb(23, 40, 65);
+    background-color: var(--blue-dark);
 }
 
 #about-me h2 {
@@ -228,7 +160,7 @@ header ul li a:hover {
 
     #about-me {
         height: auto;
-        padding: 50px 20px 50px 20px;
+        padding: 5rem 1rem 5rem 1rem;
     }
 }
 
@@ -307,8 +239,8 @@ header ul li a:hover {
     justify-content: center;
     align-items: center;
     color: white;
-    padding: 50px;
-    height: 100vh;
+    padding: 5rem 1rem 5rem 1rem;
+    min-height: 100vh;
     background-color: #41b3a3;
 }
 
@@ -399,6 +331,21 @@ header ul li a:hover {
 
 ::placeholder {
     vertical-align: middle;
+    font-size: 0.9rem;
+}
+
+@media only screen and (max-width: 500px) {
+    #contacts, 
+    .contacts-div,
+    .contact-form {
+        width: 100%;
+        padding-left: 0.2rem;
+        padding-right: 0.2rem;
+    }
+
+    .grid-form {
+        grid-template-columns: 1fr;
+    }
 }
 
 /* || FOOTER */
