--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ header ul li a:hover {
 #portrait {
     display: block;
     max-width: 230px;
-    max-height: 300px;
+    max-height: 320px;
     width: auto;
     height: auto;
     border-radius: 5px;
@@ -193,6 +193,14 @@ header ul li a:hover {
 
 .skills-container li {
     list-style-type: square;
+}
+
+.skills-container a {
+    color: white;
+}
+
+.skills-container a:hover {
+    color: orange;
 }
 
 @media only screen and (max-width: 700px) {
